# LLM_Robot_Integration

./: .gitignore  README.md  frames.gv  requirements.txt
src/kinova_moveit_alan/: .setup_assistant  CMakeLists.txt  package.xml
src/kinova_moveit_alan/config/: j2n6s300.srdf
src/kinova_moveit_alan/launch/: chomp_planning_pipeline.launch.xml  fake_moveit_controller_manager.launch.xml  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/llmbot_remote/: CMakeLists.txt  package.xml
src/llmbot_remote/action/: llmbot_arm.action  llmbot_gripper.action  llmbot_task.action
src/llmbot_remote/scripts/: api_node.py  arm_server.py  arm_state.py  gripper_server.py  scene_description_service.py
src/llmbot_remote/scripts/api/: api.py  llm_bridge.py  ros_bridge.py  system_prompts.py
src/llmbot_remote/scripts/api/models/: requests.py
src/llmbot_remote/srv/: SceneDescription.srv
